[tool.poetry]
name = "curswork-bd"
version = "0.1.0"
description = ""
authors = ["j1nnx <neykerez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
